SERVER-84276 Account for uninitialized FCV and not gated feature flags during query parsing validation (#17664)

GitOrigin-RevId: b875e4a182d3a20720a2c4f78418134204df0111